# librawdist

./: .gitignore  CHANGELOG  Cargo.toml  README
.github/workflows/: ci.yml  cli-release.yml  lib-release.yml
src/: checksum.rs  error.rs  fetch.rs  filter.rs  fs.rs  install.rs  lib.rs  lock.rs  main.rs  manager.rs  manifest.rs  package.rs  types.rs  verify.rs
tests/: checksum_tests.rs  cli_tests.rs  fetch_tests.rs  filter_tests.rs  fs_tests.rs  install_tests.rs  lock_tests.rs  manager_tests.rs  manifest_tests.rs  package_tests.rs  types_tests.rs  verify_tests.rs
tests/common/: mod.rs
