[package]
name = "librawdist"
version = "0.5.0"
edition = "2024"
description = "library package manager for the rawssg ecosystem"
license = "GPL-3.0"
repository = "https://github.com/mroczect/librawdist"

[lib]
path = "src/lib.rs"

[[bin]]
name = "rawdist"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "1.1"
thiserror = "2"
miette = { version = "7", features = ["fancy"] }
tar = "0.4"
flate2 = "1.1"
sha2 = "0.11"
hex = "0.4"
walkdir = "2.5"
tempfile = "3"
log = "0.4"
semver = "1.0"
fs2 = "0.4"
glob = "0.3"
ureq = "3"
dirs-next = "2.0"
clap = { version = "4.6.1", features = ["derive"] }
env_logger = "0.11.11"

[dev-dependencies]
assert_cmd = "2.2"
predicates = "3.1"
tempfile = "3.27"
mockito = "1.7"
